sandbox/output
Hiker.java:12: error: ';' expected
                    sum = sum + Integer.parseInt(ints[i])
                                                         ^
1 error
